--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,6 +19,7 @@ jobs:
     strategy:
       matrix:
         features:
+          - protoc
           - vim
         baseImage:
           - debian:latest
